fix: make the alias building mechanism more robust